Fix urgancy spacing and add line breaks to message box

--- a/src/pages/new-issue-form/NewIssueForm.scss
+++ b/src/pages/new-issue-form/NewIssueForm.scss
@@ -14,6 +14,9 @@
     }
     & .newIssueTitle {
       flex: 4;
+      & .title {
+        padding-right: 1em;
+      }
     }
     & .newIssueSummaryEdit {
       display: flex;
